env/code_53e885b534f0c/stderr.txt
  File "main.py", line 6
    print a
          ^
SyntaxError: invalid syntax
